# ct2pcd

./: .gitignore  CMakeLists.txt  README.md  decompress.py
include/: includes.h  rDICOM.h  visualizer.h
src/: main.cpp  rDICOM.cpp  visualizer.cpp
